<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_fragment_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BookFragment"

    android:weightSum="3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_fragment_book"
        android:layout_width="match_parent"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/scrollView_fragment_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp"
        >

        <ImageView
            android:id="@+id/cover_fragment_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/book_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/linearLayout_fragment_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/henri_pottier"
            app:layout_constraintHorizontal_weight="2"/>

        <LinearLayout
            android:id="@+id/linearLayout_fragment_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cover_fragment_book"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"

            app:layout_constraintHorizontal_weight="3">

            <TextView
                android:id="@+id/isbn_fragment_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn" />

            <TextView
                android:id="@+id/title_fragment_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                android:id="@+id/price_fragment_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_36" />

            <Button
                android:id="@+id/button_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView_fragment_book"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_fragment_book">

        <TextView
            android:id="@+id/synopsis_fragment_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/synopsis" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>